<resources>
    <string name="app_name">SmartGarden</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="irrigation_system">Irrigation system</string>
    <string name="smart_garden">Smart Garden</string>
    <string name="light_system">Light system</string>
    <string name="require_manual_control">Require manual control</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="def_val">0</string>
    <string name="add">add</string>
</resources>